--- a/docmost/docker-compose.yml
+++ b/docmost/docker-compose.yml
@@ -9,9 +9,15 @@ services:
       - "traefik.http.routers.docmost.rule=Host(`docs.bryanwills.dev`)"
       - "traefik.http.routers.docmost.entrypoints=websecure"
       - "traefik.http.routers.docmost.tls.certresolver=letsencrypt"
-      - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
+      # - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
+      # - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
       #     - "traefik.http.routers.docmost.middlewares=docmost-https-redirect"
-      - "traefik.http.routers.docmost-secure.entrypoints=https"
-      - "traefik.http.routers.docmost-secure.rule=Host(`docs.bryanwills.dev`)"
+      # - "traefik.http.routers.docmost-secure.entrypoints=https"
+      # - "traefik.http.routers.docmost-secure.rule=Host(`docs.bryanwills.dev`)"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "portainer_data:/data"
     restart: unless-stopped
+
+volumes:
+  portainer_data:
