--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,9 +6,32 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    # Real IP configuration for proxy environments
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+    set_real_ip_from 0.0.0.0/0;
+
+    # Enhanced log formats for detailed tracking
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
+
+    # Detailed tracking log format with IP and device info
+    log_format  tracking  '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for" '
+                          '$request_time $upstream_response_time '
+                          '$http_accept_language $http_accept_encoding '
+                          '$http_connection $http_upgrade '
+                          '$http_sec_fetch_dest $http_sec_fetch_mode '
+                          '$http_sec_fetch_site $http_sec_fetch_user';
+
+    # IP-based tracking format for marketing analytics
+    log_format  ip_tracking  '$remote_addr|$time_local|"$request"|$status|'
+                             '$body_bytes_sent|"$http_referer"|"$http_user_agent"|'
+                             '$request_time|$http_accept_language|$http_accept_encoding|'
+                             '$http_connection|$http_upgrade|$http_sec_fetch_dest|'
+                             '$http_sec_fetch_mode|$http_sec_fetch_site|$http_sec_fetch_user';
 
     access_log  /var/log/nginx/access.log  main;
 
