--- a/nginx/sites/bryanwills.dev.conf
+++ b/nginx/sites/bryanwills.dev.conf
@@ -3,12 +3,34 @@ server {
     server_name bryanwills.dev www.bryanwills.dev;
 
     # Root directory for the website
-    root /var/www/bryanwills.dev/html;
+    root /var/www/bryanwills.dev/html/out;
     index index.html index.htm;
 
     # Enhanced logging with detailed information
     access_log /var/log/nginx/bryanwills.dev_access.log combined;
     error_log /var/log/nginx/bryanwills.dev_error.log;
+
+    # Handle Next.js static files with proper caching
+    location /_next/ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # Handle static assets with proper caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|pdf)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # Handle client-side routing for Next.js
+    location / {
+        try_files $uri $uri.html $uri/ /index.html;
+    }
+
+    # Handle 404 errors
+    error_page 404 /404.html;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -32,17 +54,6 @@ server {
         application/xml+rss
         application/atom+xml
         image/svg+xml;
-
-    # Main location block
-    location / {
-        try_files $uri $uri/ /index.html;
-
-        # Cache static files
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-    }
 
     # API endpoints (if you have any)
     location /api/ {
