Remove gist config.yml from git tracking and add config-example.yml - resolves GitGuardian secrets detection permanently

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,6 @@ db.*
 **/hashicorp/vault-data/
 **/vault-data/
 **/postgres_data/
+
+# Ignore service configuration files with secrets
+**/gist/config.yml
