updating .gitignore to remove Git Guardian cache.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ matomo/html/vendor/**/*
 # Ignore system files
 .DS_Store
 Thumbs.db
+.cache_ggshield
 
 # Ignore Docker-related files
 **/acme.json
