Implement centralized logging system with Graylog and rsyslog forwarding - Add Graylog stack (MongoDB, Elasticsearch, Graylog) with Traefik integration - Configure rsyslog for monthly log rotation and Graylog forwarding - Fix Traefik v3 configuration with proper Docker provider and entrypoints - Add comprehensive documentation for adding log sources from multiple OS distributions - Support both UDP and TCP log forwarding with enhanced templates - Enable real-time log aggregation and search via Graylog web interface - Configure proper network connectivity between rsyslog and Graylog containers - Add custom templates for preserving source hostname, IP, and program information - Document configuration steps for Ubuntu, Red Hat, Fedora, Arch, Oracle Linux, and macOS - Resolve Traefik routing issues and port conflicts for proper service discovery

--- a/rsyslog/docker-compose.yml
+++ b/rsyslog/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
     networks:
       - proxy
+      - graylog_graylog
     environment:
       - TZ=/etc/localtime
       - RSYSLOG_HOSTNAME=logs.bryanwills.dev
@@ -26,4 +27,6 @@ volumes:
 
 networks:
   proxy:
+    external: true
+  graylog_graylog:
     external: true
