--- a/rsyslog/rsyslog.conf
+++ b/rsyslog/rsyslog.conf
@@ -27,8 +27,16 @@ template(
   string="%timegenerated:::date-rfc3339% %hostname% %syslogtag%%msg:::sp-if-no-1st-sp%%msg:::drop-last-lf%\n"
 )
 
-# Rule
+# TCP-specific template with proper framing
+template(
+  name="TCPMsgFrame"
+  type="string"
+  string="%msg%\n"
+)
+
+# Rule: Log to local files AND forward to Graylog (both UDP and TCP)
 if ($fromhost-ip != "127.0.0.1" and $fromhost-ip != "::1") then {
+  # Log to local monthly files
   action(
     type="omfile"
     dynaFile="MonthlyLog"
@@ -37,5 +45,27 @@ if ($fromhost-ip != "127.0.0.1" and $fromhost-ip != "::1") then {
     dirCreateMode="0755"
     fileCreateMode="0644"
   )
+
+  # Forward to Graylog UDP input (port 1515)
+  action(
+    type="omfwd"
+    target="graylog-server"
+    port="1515"
+    protocol="udp"
+    template="MsgLocalRFC3339"
+  )
+
+  # Forward to Graylog TCP input (port 1516) with proper framing
+  action(
+    type="omfwd"
+    target="graylog-server"
+    port="1516"
+    protocol="tcp"
+    template="TCPMsgFrame"
+    action.resumeRetryCount="-1"
+    action.resumeInterval="30"
+    action.reportSuspension="on"
+  )
+
   stop
 }
