--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -4,9 +4,21 @@ services:
     image: traefik:v3.3
     container_name: traefik
     restart: unless-stopped
+    command:
+      - "--api.dashboard=true"
+      - "--api.insecure=false"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=proxy"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.letsencrypt.acme.email=admin@bryanwills.dev"
+      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.letsencrypt.acme.tlschallenge=true"
+      - "--log.level=INFO"
     environment:
       - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-      # - HOSTNAME=25ead172d6a4
+      # - HOSTNAME=25ead172d6c4
       - HOSTNAME=traefik.bryanwills.dev
       - TRAEFIK_DASHBOARD_CREDENTIALS=admin:$$2y$$05$$Ag0WbGKS.oMQLWqhWp4ENeVIGKmX5JtB1HRY2bcLZULHM0rN3BRxO
       - HOME=/root
@@ -14,9 +26,7 @@ services:
       - /home/bryanwi09/docker/traefik/logs:/var/log/traefik
       - /etc/localtime:/etc/localtime
       - /var/run/docker.sock:/var/run/docker.sock
-      - /home/bryanwi09/docker/traefik/traefik.yml:/traefik.yml
       - /home/bryanwi09/docker/traefik/acme.json:/letsencrypt/acme.json
-      - /home/bryanwi09/docker/traefik/config.yaml:/config.yaml
     ports:
       - "80:80"
       - "443:443"
@@ -25,8 +35,6 @@ services:
       - "com.docker.compose.container-number=1"
       - "com.docker.compose.depends_on="
       - "com.docker.compose.image=sha256:3a1e150bf4c5610ac288b87c5e42e9ddc514e72b7ecdc43bde4776bda41edbc9"
-      - "com.docker.compose.oneoff=False"
-      - "com.docker.compose.project=traefik"
       - "com.docker.compose.project.config_files=/home/bryanwi09/docker/traefik/docker-compose.yml"
       - "com.docker.compose.project.working_dir=/home/bryanwi09/docker/traefik"
       - "com.docker.compose.service=traefik"
@@ -43,13 +51,13 @@ services:
       - "traefik.http.middlewares.traefik-auth.basicauth.users=admin:$$2y$$05$$Ag0WbGKS.oMQLWqhWp4ENeVIGKmX5JtB1HRY2bcLZULHM0rN3BRxO"
       - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.dashboard.service=api@internal"
-      - "traefik.http.routers.traefik-secure.entrypoints=https"
+      - "traefik.http.routers.traefik-secure.entrypoints=websecure"
       - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
       - "traefik.http.routers.traefik-secure.rule=Host(`traefik.bryanwills.dev`)"
       - "traefik.http.routers.traefik-secure.service=api@internal"
       - "traefik.http.routers.traefik-secure.tls=true"
       - "traefik.http.routers.traefik-secure.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.traefik.entrypoints=http"
+      - "traefik.http.routers.traefik.entrypoints=web"
       - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
       - "traefik.http.routers.traefik.rule=Host(`traefik.bryanwills.dev`)"
     networks:
